[BUGFIX] Icons in inspector breadcrumb misaligned
Reviewed-on: https://review.typo3.org/25106
Tested-by: Aske Ertmann
Tested-by: Mr. Hudson
Tested-by: Sebastian Kurfuerst
Original-Commit-Hash: 655e5e7b4c6efa4554825130a928fefdc8c55900

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
@@ -90,6 +90,7 @@
 
 			i {
 				margin-top: 3px;
+				margin-right: 5px;
 			}
 
 			div {
@@ -150,6 +151,10 @@
 
 					&:hover {
 						background-color: $blue;
+					}
+
+					i {
+						display: inline-block;
 					}
 
 					a {
